--- a/www/css/style.css
+++ b/www/css/style.css
@@ -157,12 +157,65 @@ input[type="search"]::-webkit-input-placeholder {
 	padding: 15px;
 }
 .avatar+.username {
-	line-height: 50px;
-}
-.item.item-avatar {
-	padding-left: 80px !important;
+	line-height: 40px;
 }
 .user-list .avatar, .user-list .item-avatar .avatar {
 	height: 50px;
 	width: 50px;
+}
+.comment-detail > h2 {
+	color: #0C60EE;
+}
+.comment-detail > div {
+	padding: 3px 0;
+}
+.bar.bar-subheader .filter {
+	display: inline-block;
+}
+.follow-block > span.active {
+	font-weight: bold;
+}
+.text-anncounce {
+	font-size: 1.2em;
+	padding: 15px;
+	margin:0;
+}
+.hero>.content>.avatar {
+	margin-bottom: 0;
+}
+.hero>.content {
+	bottom:10px !important;
+}
+.hero {
+	height: 230px !important;
+}
+.button-dark.active {
+	background-color: #FFF !important;
+	color: #000 !important;
+}
+.hero > .content > .button {
+	padding: 0 12px;
+}
+.follow-block {
+	padding: 5px 0;
+}
+.comment-section {
+	border-top: 1px solid #EEE;
+	margin-bottom: 20px;
+}
+.comment-section > .card > .item:last-child {
+	padding-bottom: 0;
+	min-height: 10px;
+}
+.card {
+	margin:0;
+}
+.buttons-right > .right-buttons > .deal-button {
+	height: 43px;
+	padding: 0 2rem;
+	max-width: 60px;
+	width: 60px;
+}
+.modal-map {
+	border-top: 1px solid #7C7C7C;
 }
